--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
                            class="text-gray-500 hover:text-indigo-600 text-sm font-bold transition flex items-center gap-1">
                             
                             {# アイコン画像 #}
-                            <img src="{% static 'images/churoom_icon.jpg' %}" alt="Icon" class="w-5 h-5 mr-1 object-contain">
+                            <img src="{% static 'images/churoom.jpg' %}" alt="Icon" class="w-5 h-5 mr-1 object-contain">
                             
                             在学生はこちら
                             {# 外部リン矢印 #}
